@@ -1,6 +1,6 @@
 
 /*
- * Copyright (c) 2006-2011 by Roland Riegel <feedback@roland-riegel.de>
+ * Copyright (c) 2006-2012 by Roland Riegel <feedback@roland-riegel.de>
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of either the GNU General Public License version 2
@@ -51,8 +51,6 @@ uint32_t swap32(uint32_t i)
 }
 
 #endif
-
-#if DOXYGEN || !__AVR__
 
 /**
  * Reads a 16-bit integer from memory in little-endian byte order.
@@ -105,8 +103,6 @@ void write32(uint8_t* p, uint32_t i)
     p[1] = (uint8_t) ((i & 0x0000ff00) >>  8);
     p[0] = (uint8_t) ((i & 0x000000ff) >>  0);
 }
-
-#endif
 
 /**
  * @}
